# wf_web_market

./: .env  Makefile  README.md  alembic.ini  docker-compose-local.yaml  pyproject.toml
market_analysis/: main.py  redis_settings.py  settings.py
market_analysis/backstage/: backstage.py  order_shema.py
market_analysis/db/: models.py  session.py
market_analysis/db/dals/: arcane_dal.py  arcane_location_dal.py  item_dal.py  item_update_dal.py  order_dal.py  type_dal.py
market_analysis/feature/: filter.py
market_analysis/localization/: localization.py
market_analysis/localization/lngs/: en.json  ru.json
market_analysis/routers/: admin_page.py  api_handler.py  web_page.py
market_analysis/routers/response_model/: arcane_model.py  item_model.py
market_analysis/static/admin/: style_approve_arcane_location.css  style_approve_item.css  style_base.css  style_items.css
market_analysis/static/admin/js/: approve_arcane_location.js  approve_item.js
market_analysis/static/web/: style_arcane.css  style_base.css  style_guns.css  style_home.css  style_primed_mods.css  style_teshin_shop.css
market_analysis/templates/admin/: approve_arcane_location.html  approve_item.html  base.html  items.html
market_analysis/templates/web/: arcane.html  base.html  guns.html  home.html  primed_mods.html  teshin_shop.html
market_analysis/tests/: test.py  test2.py
migrations/: env.py
migrations/versions/: 5be35cf80db1_test.py
